--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
 body {
-  background-color: red;
+  background-color: #008080;
+  background: url("/ExpressHolidays/images/background.jpg") no-repeat 50% 0;
 }
