--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,6 @@ body {
 
 .left {
   width: 200px;
-  background-color: #dadada;
   float: left;
 }
 
@@ -29,6 +28,7 @@ body {
 
 .logo {
   margin-bottom: 40px;
+  width: 200px;
 }
 
 .sidebar {
