Background hex change

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #000000;
-  background: url("/ExpressHolidays/images/background.jpg") no-repeat 50% 0;
+  /* background: #000 url("/ExpressHolidays/images/background.jpg") no-repeat 50% 0; */
 }
 .container {
   max-width: 1000px;
@@ -20,6 +20,8 @@ body {
 .navigation {
   background-color: #dadada;
   margin-bottom: 40px;
+  padding: 60px;
+  font-size: 20px;
 }
 
 .content {
