--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .footer {
-    background-color: dadada
+    background-color: #dadada
     clear: left;
 }
 
@@ -68,7 +68,7 @@ body {
 }
 
 .sidebar {
-  
+
 }
 
 .sidebar img {
