--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 .navigation-default {
-  background: #dadada url("/ExpressHolidays/images/banner.jpg") no-repeat 50; 40;
+  background: #dadada url("/ExpressHolidays/images/banner.jpg") no-repeat 50% 40%;
   background-size: cover;
 }
 
