--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .footer {
-    background-color: #ffffff;
+    background-color: #dadada;
     clear: left;
 }
 
@@ -30,7 +30,7 @@ body {
 }
 
 .navigation-default {
-  background: #dadada url("/ExpressHolidays/images/banner3.jpg") no-repeat 50% 0%;
+  background: #dadada url("/ExpressHolidays/images/banner3.jpg") no-repeat 50% 0;
   background-size: cover;
 }
 
