--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,10 +17,10 @@ body {
   margin-bottom: 40px;
 }
 
-.footer {
+footer {
     background-color: #dadada;
     clear: left;
-    min-height
+    
 }
 
 .navigation {
